--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,7 +43,7 @@ body {
 .title {
     font-size: 32px;
     font-weight: 600;
-    color: white;
+    color: black;
     line-height: 1.5;
     margin-bottom: 30px;
 }
