--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1843,7 +1843,7 @@ textarea:focus::placeholder {
 }
 .btn-2:hover,
 .btn-2:focus {
-  background: linear-gradient(80deg, #fa5252 0%, #e12a72 100%);
+  background: linear-gradient(80deg, #54A2DC 0%, #094195 100%);
   border: 1px solid
     linear-gradient(97deg, rgb(201, 93, 93) 0%, rgb(9, 65, 149) 100%);
   color: var(--light-white);
@@ -2207,7 +2207,7 @@ textarea:focus::placeholder {
   display: inline-flex;
   width: 26px;
   height: 26px;
-  background: linear-gradient(180deg, #fa5252 0%, #e12a72 100%);
+  background: linear-gradient(180deg, #54A2DC 0%, #094195 100%);
   border-radius: 50%;
   text-align: center;
   justify-content: center;
@@ -2899,14 +2899,14 @@ textarea:focus::placeholder {
   margin-bottom: 3px;
 }
 .bostami-parsonal-info-contact-item .text p {
-  font-size: 16px; 
+  font-size: 0.75rem; /* 16px */
   line-height: 24px;
   font-weight: 400;
   color: var(--common-black);
   text-transform: capitalize;
   margin-bottom: 0;
 }
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+/* @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .bostami-parsonal-info-contact-item .text p {
     font-size: 14px;
   }
@@ -2915,7 +2915,7 @@ textarea:focus::placeholder {
   .bostami-parsonal-info-contact-item .text p {
     font-size: 14px; 
   }
-}
+} */
 
 .bostami-parsonal-info-area.bostami-parsonal-info-2-area {
   background-color: transparent;
@@ -3471,14 +3471,14 @@ textarea:focus::placeholder {
 }
 @media (max-width: 767px) {
   .portfolio-modal-box .modal-dialog .modal-content .modal-header .close {
-    border-color: #e12a72;
-    color: #e12a72;
+    border-color: #094195;
+    color: #094195;
   }
 }
 .portfolio-modal-box .modal-dialog .modal-content .modal-header .close:hover {
   rotate: 90deg;
-  border-color: #e12a72;
-  color: #e12a72;
+  border-color: #094195;
+  color: #094195;
 }
 .portfolio-modal-box .modal-dialog .modal-content .modal-body .h1-modal-img {
   border-radius: 15px;
@@ -3488,7 +3488,7 @@ textarea:focus::placeholder {
 .portfolio-modal-box .modal-dialog .modal-content .modal-body .blog-title {
   font-size: 28px;
   text-align: center;
-  color: #fa5252;
+  color: #54A2DC;
   margin-bottom: 35px;
 }
 @media (max-width: 767px) {
@@ -3579,7 +3579,7 @@ textarea:focus::placeholder {
   .portfolio-modal-table
   .portfolio-modal-table-text
   a:hover {
-  color: #fa5252;
+  color: #54A2DC;
 }
 .portfolio-modal-box
   .modal-dialog
@@ -3613,23 +3613,23 @@ textarea:focus::placeholder {
   }
 }
 .page-wrapper-2 .fillter-btn-wrap .fillter-btn:hover {
-  color: #fa5252;
+  color: #54A2DC;
 }
 .page-wrapper-2 .fillter-btn-wrap .fillter-btn.is-checked {
-  color: #fa5252;
+  color: #54A2DC;
 }
 .page-wrapper-2 .fillter-item .item-title:hover {
-  color: #fa5252;
+  color: #54A2DC;
 }
 
 .home-3 .fillter-btn-wrap .fillter-btn:is(.is-checked) {
-  color: #fa5252;
+  color: #54A2DC;
 }
 .home-3 .fillter-btn-wrap .fillter-btn:hover {
-  color: #fa5252;
+  color: #54A2DC;
 }
 .home-3 .fillter-item .item-title:hover {
-  color: #fa5252;
+  color: #54A2DC;
 }
 
 /*
@@ -3828,14 +3828,14 @@ textarea:focus::placeholder {
 }
 @media (max-width: 767px) {
   .modal-header .close {
-    border-color: #e12a72;
-    color: #e12a72;
+    border-color: #094195;
+    color: #094195;
   }
 }
 .modal-header .close:hover {
   rotate: 90deg;
-  border-color: #e12a72;
-  color: #e12a72;
+  border-color: #094195;
+  color: #094195;
 }
 .h1-modal-box .modal-dialog .modal-content .modal-body .h1-modal-img {
   border-radius: 15px;
@@ -3867,7 +3867,7 @@ textarea:focus::placeholder {
 .h1-modal-box .modal-dialog .modal-content .modal-body .h1-modal-comment-item {
   display: flex;
   gap: 30px;
-  border: 1px solid #fa5252;
+  border: 1px solid #54A2DC;
   border-radius: 15px;
   padding: 20px;
   margin-top: 50px;
@@ -3954,7 +3954,7 @@ textarea:focus::placeholder {
   .h1-modal-comment-item
   .content
   .reply-btn:hover {
-  color: #fa5252;
+  color: #54A2DC;
 }
 .h1-modal-box
   .modal-dialog
@@ -4002,7 +4002,7 @@ textarea:focus::placeholder {
   outline: none;
   padding: 8px 20px;
   border-radius: 20px;
-  background: linear-gradient(180deg, #fa5252 0%, #e12a72 100%);
+  background: linear-gradient(180deg, #54A2DC 0%, #094195 100%);
   color: white;
 }
 .h1-modal-box
@@ -4011,20 +4011,20 @@ textarea:focus::placeholder {
   .modal-body
   .h1-modal-comment-box
   button:hover {
-  background: linear-gradient(80deg, #fa5252 0%, #e12a72 100%);
+  background: linear-gradient(80deg, #54A2DC 0%, #094195 100%);
 }
 
 .page-wrapper-2 .blog-slider-wrap .blog-progation span {
-  border: 1px solid #fa5252 !important;
+  border: 1px solid #54A2DC !important;
 }
 .page-wrapper-2
   .blog-slider-wrap
   .blog-progation
   span:is(.swiper-pagination-bullet-active) {
-  background-color: #fa5252;
+  background-color: #54A2DC;
 }
 .page-wrapper-2 .blog-slider-single .blog-title:hover {
-  color: #fa5252;
+  color: #54A2DC;
 }
 
 .home-3 .blog-slider-wrap .blog-progation span {
@@ -4037,7 +4037,7 @@ textarea:focus::placeholder {
   background-color: #f95054;
 }
 .home-3 .blog-slider-single .blog-title:hover {
-  color: #fa5252;
+  color: #54A2DC;
 }
 
 /*
@@ -4102,6 +4102,7 @@ textarea:focus::placeholder {
   gap: 20px;
   padding: 30px;
   border-radius: 10px;
+  overflow: hidden;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .bostami-contact-item {
@@ -4111,7 +4112,7 @@ textarea:focus::placeholder {
 @media (max-width: 767px) {
   .bostami-contact-item {
     padding: 20px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
   }
 }
 @media only screen and (min-width: 576px) and (max-width: 767px) {
@@ -4140,17 +4141,66 @@ textarea:focus::placeholder {
   }
 }
 .bostami-contact-item .text .title {
-  font-size: 20px;
+  font-size: 1rem; /* 20px */
   font-weight: 500;
   line-height: 30px;
   margin-bottom: 10px;
 }
 .bostami-contact-item .text span {
   display: block;
-  font-size: 18px;
+  font-size: 0.8rem; /* 18px */
   font-weight: 400;
   color: #44566c;
   line-height: 30px;
+  
+}
+
+@media only screen and (min-width: 300px) and (max-width: 399px) {
+  .bostami-contact-item .text .title {
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 30px;
+    margin-bottom: 10px;
+  }
+  .bostami-contact-item .text span {
+    display: block;
+    font-size: 10px;
+    font-weight: 400;
+    color: #44566c;
+    line-height: 30px;
+  }
+}
+
+@media only screen and (min-width: 400px) and (max-width: 780px) {
+  .bostami-contact-item .text .title {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 30px;
+    margin-bottom: 10px;
+  }
+  .bostami-contact-item .text span {
+    display: block;
+    font-size: 12px;
+    font-weight: 400;
+    color: #44566c;
+    line-height: 30px;
+  }
+}
+
+@media only screen and (min-width: 950px) and (max-width: 1100) {
+  .bostami-contact-item .text .title {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 30px;
+    margin-bottom: 10px;
+  }
+  .bostami-contact-item .text span {
+    display: block;
+    font-size: 10px;
+    font-weight: 400;
+    color: #44566c;
+    line-height: 30px;
+  }
 }
 
 /*
@@ -4870,7 +4920,7 @@ textarea:focus::placeholder {
   ul
   li
   a:hover {
-  color: #fa5252;
+  color: #54A2DC;
 }
 .dark-theme
   .page-wrapper
@@ -4881,7 +4931,7 @@ textarea:focus::placeholder {
   ul
   li.active
   a {
-  color: #fa5252;
+  color: #54A2DC;
 }
 .dark-theme
   .page-wrapper
@@ -4922,7 +4972,7 @@ textarea:focus::placeholder {
   span
   svg
   * {
-  fill: #fa5252;
+  fill: #54A2DC;
 }
 .dark-theme
   .page-wrapper
@@ -4936,7 +4986,7 @@ textarea:focus::placeholder {
   span
   svg
   * {
-  fill: #fa5252;
+  fill: #54A2DC;
 }
 .dark-theme
   .page-wrapper
